err/fito.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/PyYAML-3.12.egg-info'...
Listing './lib/python3.5/site-packages/cmd2-0.7.9.egg-info'...
Listing './lib/python3.5/site-packages/fito'...
Listing './lib/python3.5/site-packages/fito/data_store'...
Compiling './lib/python3.5/site-packages/fito/data_store/base.py'...
***   File "./lib/python3.5/site-packages/fito/data_store/base.py", line 53
    except KeyError, e:
                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fito/data_store/file.py'...
***   File "./lib/python3.5/site-packages/fito/data_store/file.py", line 138
    except Exception, e:  # there might be a key that is not a valid json
                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/fito/data_store/rehash_ui.py'...
***   File "./lib/python3.5/site-packages/fito/data_store/rehash_ui.py", line 20
    print self.colorize("Similar specs", 'green')
             ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fito/model'...
Compiling './lib/python3.5/site-packages/fito/operation_runner.py'...
***   File "./lib/python3.5/site-packages/fito/operation_runner.py", line 103
    if self.verbose: print "Fifo hit!"
                                     ^
SyntaxError: Missing parentheses in call to 'print'

Listing './lib/python3.5/site-packages/fito/operations'...
Listing './lib/python3.5/site-packages/fito/specs'...
Compiling './lib/python3.5/site-packages/fito/specs/base.py'...
***   File "./lib/python3.5/site-packages/fito/specs/base.py", line 174
    except MissingUnwiredParamError, e:
                                   ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/fito-0.5.1.egg-info'...
Listing './lib/python3.5/site-packages/memoized_property-1.0.3.egg-info'...
Listing './lib/python3.5/site-packages/mmh3-2.5.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyparsing-2.2.0.dist-info'...
Listing './lib/python3.5/site-packages/pyperclip'...
Listing './lib/python3.5/site-packages/pyperclip-1.6.0.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/yaml'...
Listing './share'...
Listing './share/python-wheels'...
